style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: 0;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background: url(img/bg.png);
    background-repeat: no-repeat;
    background-size: cover;
}

.container{
    position: relative;
    width: 400px;
    height: 555px;
    background-color: rgba(255, 252, 252, 0.1);
    backdrop-filter: blur(20px);
    border: 2px solid rgba(255,255,255, .2);
    border-radius: 20px;
    padding: 18px;
    color: #ffff;
}

.search-box {
    position: relative; 
    width: 100%;
    height: 55px;
    display: flex;
    align-items: center;
    background: transparent;
    border: 2px solid rgba(255,255,255, .2);
    border-radius: 16px;
}

.search-box input {
    position: absolute;
    width: 100%;
    height: 100%;
    background: transparent;
    border: none;
    outline: none;
    font-size: 22px;
    color: #fff;
    font-weight: 500;
    margin-left: 8px;
    text-transform: uppercase;
}

.search-box input::placeholder{
    color: #ffff;
    text-transform: capitalize;
}

.btn-search img {
    width: 30px;
}

.search-box button {
    position: absolute;
    right: 20px;
    width: 20px;
    height: 20px;
    background: transparent;
    border: none;
    outline: none;
    font-size: 28px;
    margin: 5px 5px 15px 0;
}

.meteo-box {
    text-align: center;
    margin: 40px 0;
}

.meteo-box img {
    width: 50% ;
}

.meteo-box .temperature {
    position: relative;
    font-size: 64px;
    line-height: 1;
    font-weight: 700;
    margin: 10px 0 6px 0;
}

.meteo-box .temperature span {
    position: absolute;
    font-size: 24px;
    margin-left: 1px;
}

.meteo-box .description {
    font-size: 22px;
    font-weight: 500;
    text-transform: capitalize;
}

 .container_details{
    margin-top: 7em;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
} 

.meteo-details{
    display: flex;
    flex-flow: row;
    align-items: center;
}

.humidity, .wind {
    display: flex;
    gap: 5px;
}

.meteo-details img {
    width: 50px;
    margin-right: 10px;
}

.container_info_meteo {
    margin-top: 10px;

}

